# deployer

./: .gitignore  Cargo.toml  DOCS.ru.md  README.md  deploy-config.json
.github/workflows/: rust.yml
src/: actions.rs  build.rs  clean.rs  cmd.rs  configs.rs  entities.rs  i18n.rs  init.rs  main.rs  pipelines.rs  project.rs  rw.rs  tests.rs  utils.rs  variables.rs
src/actions/: buildlike.rs  check.rs  deploylike.rs  observe.rs  packlike.rs  project_clean.rs
src/entities/: custom_command.rs  environment.rs  info.rs  programming_languages.rs  targets.rs  traits.rs  variables.rs
src/i18n/: en.rs  ru.rs
