[package]
name = "deployer"
version = "0.1.1-beta-9"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2"
dirs = "5.0"
inquire = { git = "https://github.com/markcda/inquire.git", branch = "feat/reorder-values", features = ["reorder"] }
mimalloc = "0.1.43"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }

[features]
default = []
tests = []
