[package]
name = "deployer"
version = "0.1.1-beta-14"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
colored = "2"
ctrlc = "3.4"
dirs = "5.0"
inquire = { git = "https://github.com/markcda/inquire.git", branch = "feat/reorder-values", features = ["reorder"] }
mimalloc = "0.1.43"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strip-ansi-escapes = "0.2"
uuid = { version = "1.11", features = ["v4", "fast-rng"] }

[features]
default = ["i18n-ru"]
tests = []
i18n-ru = []
